<resources>
    <string name="app_name">ProgrammerCalculatorChallenge</string>
    <string name="Decimal10">Decimal (10)</string>
    <string name="Binary2">Binary (2)</string>
    <string name="Octal8">Octal (8)</string>
    <string name="Hexadecimal16">Hexadecimal (16)</string>
    <string name="calculate">Calculate</string>
    <string name="clear">clear</string>
    <string name="decimal_digits">0123456789</string>
    <string name="binary_digits">01</string>
    <string name="octal_digits">01234567</string>
    <string name="hexadecimal_digits">0123456789AaBbCcDdEeFf</string>
</resources>