<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/screenMargin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screenMargin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screenMargin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/vector_size"
        android:layout_height="@dimen/vector_size"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/vector_image"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/decimalField"
        style="@style/editTextStyle"
        android:layout_width="@dimen/no_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:hint="@string/Decimal10"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/decimalInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/decimal_digits"
            android:inputType="numberDecimal"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/binaryField"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Binary2"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/decimalField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/binaryInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/binary_digits"
            android:inputType="numberDecimal"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/octalField"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Octal8"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/binaryField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/octalInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/octal_digits"
            android:inputType="numberDecimal"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hexadecimalField"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Hexadecimal16"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/octalField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hexadecimalInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/hexadecimal_digits"
            android:inputType="text"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="@dimen/no_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/clear_button"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/primaryBlack"
        android:textSize="@dimen/title"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/hexadecimalField" />

</androidx.constraintlayout.widget.ConstraintLayout>